k8s/hello-world-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-world-api
status:
  loadBalancer: {}
