k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
   - host: hello.cwi.com.br
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-api
            port:
              number: 80
